<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/account_text_title"
            android:text="@string/account_title"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
            android:id="@+id/account_image_user"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/account_text_title"
            app:layout_constraintBottom_toTopOf="@id/account_layout_plate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/account_name"
            android:layout_marginRight="16dp"
    />

    <TextView
            android:id="@+id/account_name"
            android:text="@string/account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_text_title"
            app:layout_constraintBottom_toTopOf="@id/account_layout_plate"
            app:layout_constraintLeft_toRightOf="@id/account_image_user"
            app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
            android:id="@+id/account_layout_plate"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_image_user"
            app:layout_constraintBottom_toTopOf="@id/account_layout_rating"
            app:layout_constraintLeft_toLeftOf="parent">

        <TextView
                android:id="@+id/account_plate_title"
                android:text="@string/account_plate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/account_plate"
                android:text="@string/account_plate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/account_layout_rating"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_layout_plate"
            app:layout_constraintBottom_toTopOf="@id/account_layout_email"
            app:layout_constraintLeft_toLeftOf="parent">

        <TextView
                android:id="@+id/account_rating_title"
                android:text="@string/account_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/account_rating"
                android:text="@string/account_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/account_layout_email"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_layout_rating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

        <TextView
                android:id="@+id/account_email_title"
                android:text="@string/account_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/account_email"
                android:text="@string/account_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>