<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">

    <TextView
            android:id="@+id/home_text_title"
            android:text="@string/home_current_trip"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <fragment
            android:id="@+id/home_view_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@id/home_text_title"
            app:layout_constraintBottom_toTopOf="@id/home_text_src"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <TextView
            android:id="@+id/home_text_src"
            android:text="@string/home_detail_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_view_map"
            app:layout_constraintBottom_toTopOf="@id/home_text_yourDriver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/home_text_separator"
    />
    <TextView
            android:id="@+id/home_text_separator"
            android:text=" - "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_view_map"
            app:layout_constraintBottom_toTopOf="@id/home_text_yourDriver"
            app:layout_constraintLeft_toRightOf="@id/home_text_src"
            app:layout_constraintRight_toLeftOf="@id/home_text_dest"
    />
    <TextView
            android:id="@+id/home_text_dest"
            android:text="@string/home_detail_dest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_view_map"
            app:layout_constraintBottom_toTopOf="@id/home_text_yourDriver"
            app:layout_constraintLeft_toRightOf="@id/home_text_separator"
            app:layout_constraintRight_toRightOf="parent"
    />

    <TextView
            android:id="@+id/home_text_yourDriver"
            android:text="@string/home_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/home_text_src"
            app:layout_constraintBottom_toTopOf="@id/home_text_driver_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <ImageView
            android:id="@+id/home_image_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/home_text_yourDriver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/home_text_driver_info"
            android:src="@drawable/ic_person_black_24dp"
    />

    <LinearLayout
            android:id="@+id/home_text_driver_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/home_text_yourDriver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/home_image_driver"
            app:layout_constraintRight_toRightOf="parent">
        <TextView
                android:id="@+id/home_text_driver_info_name"
                android:text="@string/home_client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>