<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">

    <TextView
            android:id="@+id/trips_title"
            android:text="@string/title_trips"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/trips_text_past_trips"
            android:text="@string/trips_past_trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trips_title"
            app:layout_constraintBottom_toTopOf="@id/trips_list_past"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="16dp"/>

    <ListView
            android:id="@+id/trips_list_past"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/trips_text_past_trips"
            app:layout_constraintBottom_toTopOf="@id/trips_text_upcoming_trips"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
    </ListView>

    <TextView
            android:id="@+id/trips_text_upcoming_trips"
            android:text="@string/trips_upcoming_trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trips_list_past"
            app:layout_constraintBottom_toTopOf="@id/trips_list_upcoming"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="16dp"/>

    <ListView
            android:id="@+id/trips_list_upcoming"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/trips_text_upcoming_trips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
    </ListView>

</android.support.constraint.ConstraintLayout>